--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <h2><span>Santiago</span> Cadena</h2>
         </div>
         <ul class="menu">
-          <li class="scroll-link" data-target="home"><a>Home</a></li>
-          <li class="scroll-link" data-target="about"><a>About me</a></li>
-          <li class="scroll-link" data-target="portafolio"><a>Portfolio</a></li>
-          <li class="scroll-link" data-target="contact"><a>Contanct</a></li>
+          <li class="scroll-link" data-target="home"><a href="#">Home</a></li>
+          <li class="scroll-link" data-target="about"><a href="#">About me</a></li>
+          <li class="scroll-link" data-target="portafolio"><a href="#">Portfolio</a></li>
+          <li class="scroll-link" data-target="contact"><a href="#">Contanct</a></li>
         </ul>
       </nav>
     </header>
@@ -27,8 +27,11 @@
   </div>
   <div class="home" id="home" >
     <div  class="info-content">
-      <h1>Soy <span>Santiago</span> Cadena</h1>
-      <p>descripción</p>
+      <h1>Soy <span>Santiago </span>Cadena</h1>
+      <p>¡Hola! soy un estudiante de ingeniería eléctrica y electrónica en la Universidad Nacional de Colombia, 
+        y estoy a punto de embarcarme en el mundo laboral. Sin embargo, también soy una persona curiosa y apasionada por el desarrollo web y la ciencia de datos.
+        Te invito a explorar más sobre mí, mis proyectos, trabajos e información que pueda ser de tu interés. ¡No dudes en contactarme!
+      </p>
       <a download href="Hoja_de_Vida_Santiago_.pdf" target="_blank">
         <button class="download-cv">Descargar CV</button> <!-- Agregar atributo de  download para que salga ventana emergente-->
       </a>
@@ -41,8 +44,12 @@
       
       <h2>Sobre mi</h2>
       <div class="divider"></div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam enim eius illum iusto optio? Laboriosam voluptates dolorem recusandae, perferendis nam dignissimos voluptatem reiciendis error sed quis ex tempora minima harum.</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus dolorem vitae, ipsa veritatis ex cupiditate, iure eius nostrum voluptate quaerat sapiente adipisci? Asperiores dolores, perferendis temporibus itaque ratione eius adipisci!</p>
+      <p>
+        Mi visión a largo plazo es fusionar los campos de las ciencias de datos con la ingeniería eléctrica y electrónica, comprometiéndome en áreas como la automatización y el control inteligente, así como el análisis de datos para la predicción y planificación de la demanda energética. Aspiro a que el acceso a servicios vitales, como la electrificación, sea posible para la mayor cantidad de personas, incluso para aquellos que se encuentren en zonas remotas.
+        <br> <br>
+        Sin embargo, también considero que la vida tiene otros aspectos igualmente importantes, como el amor, la felicidad, el bienestar común. Por eso, me esfuerzo por disfrutar de momentos de paz y tranquilidad, como compartir momentos únicos con las personas, montar en bicicleta o sumergirme en novelas de ciencia ficción.
+
+      </p>
       <button class="download-cv">Leer más</button>
     </div>
   
@@ -57,7 +64,7 @@
       <div class="card">
         <div class="card_img"></div>
         <div class="card_title">
-          <h2> Nombre del proyecto</h2>
+          <h2>Diccionario </h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nobis delectus, aliquid magni dolorum harum quasi rem, animi totam minima distinctio perferendis ullam, laborum ipsa nam repellendus recusandae. Labore, esse.</p>
         </div>
         <div class="card_project-link">
@@ -110,7 +117,7 @@
           <button type="submit" class="btn-submit">
             Envia el mensaje
           </button>
-          <input type="hidden" name="_next" value="file:///C:/Users/santi/OneDrive/Escritorio/portfolio-tutorial-master/index.html#">
+          <input type="hidden" name="_next" value="https://santiagokdena.github.io/myportfolio.github.io/">
           <input type="hidden" name="_captcha" value="false">
         </form>
       </div>
