--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     <div class="container-contact">
       <div class="contact-form">
         <h4>Escribeme y te contacto</h4>
-        <form action="https://formsubmit.co/e06707be8c7ce67e3c38280591cdd4bd" method="POST" class="form">
+        <!-- <form action="https://formsubmit.co/e06707be8c7ce67e3c38280591cdd4bd" method="POST" class="form">
+          
           <input type="text" name="name" placeholder="Name">
           <input type="email" name="email" placeholder="Email">
           <textarea name="text" placeholder="Escribe tu mensaje"></textarea>
@@ -119,6 +120,22 @@
           </button>
           <input type="hidden" name="_next" value="https://santiagokdena.github.io/myportfolio.github.io/">
           <input type="hidden" name="_captcha" value="false">
+        </form> -->
+        <form target="_blank" action="https://formsubmit.co/scadenaa@unal.edu.co" method="POST">
+          <div class="form-group">
+            <div class="form-row">
+              <div class="col">
+                <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+              </div>
+              <div class="col">
+                <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
         </form>
       </div>
     </div>
