--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <input type="hidden" name="_next" value="https://santiagokdena.github.io/myportfolio.github.io/">
           <input type="hidden" name="_captcha" value="false">
         </form> -->
-        <form target="_blank" action="https://formsubmit.co/scadenaa@unal.edu.co" method="POST">
+        <form target="_blank" action="https://formsubmit.co/scadenaa@unal.edu.co" method="POST" id="form">
           <div class="form-group">
             <div class="form-row">
               <div class="col">
