--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container-contact">
       <div class="contact-form">
         <h4>Escribeme y te contacto</h4>
-        <form action="" class="form">
+        <form action="" class="form" id="form">
           <input type="text" name="name" placeholder="Name">
           <input type="email" name="email" placeholder="Email">
           <textarea name="text" placeholder="Escribe tu mensaje"></textarea>
